--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.react-datepicker-wrapper, .react-datepicker__input-container>input, .react-datepicker-ignore-onclickoutside{
+  border: solid 1px rgb(217, 217, 217);
+  height: 32px;
+  width: 100%;
+}
