--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 .App {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(14px + 2vmin);
   color: white;
+}
+
+.App>div{
+  width: 100%;
 }
 
 .fontSize-smaller {
