--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,25 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+}
+
+@media screen and (min-width: 1000px) {
+  #root {
+    width: 100%;
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-
-.react-datepicker-wrapper, .react-datepicker__input-container>input, .react-datepicker-ignore-onclickoutside{
+.react-datepicker-wrapper,
+.react-datepicker__input-container > input,
+.react-datepicker-ignore-onclickoutside {
   border: solid 1px rgb(217, 217, 217);
   height: 32px;
   width: 100%;
