modals:antd was removed

--- a/src/components/confirmation-form/ConfirmationForm.module.scss
+++ b/src/components/confirmation-form/ConfirmationForm.module.scss
@@ -10,8 +10,8 @@
 .ActionContainer {
     margin-top: 20px;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: row;    
+    margin: 20px auto;
     button{
         margin-right: 10px;}
 }
