--- a/src/components/confirmation-form/ConfirmationForm.module.scss
+++ b/src/components/confirmation-form/ConfirmationForm.module.scss
@@ -1,7 +1,9 @@
 .FormTitle {
     text-align: center;
-    padding-bottom: 10px;
-}
+    font-weight: 600;
+    font-size: 1.5em;
+    margin-bottom: 15px;
+  }
 .FormContainer {
     display: flex;
     flex-direction: column;
