--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+}
+
+@media screen and (min-width: 1200px) {
+  #root {
+    width: 100%;
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.react-datepicker-wrapper,
+.react-datepicker__input-container > input,
+.react-datepicker-ignore-onclickoutside {
+  border: solid 1px rgb(217, 217, 217);
+  margin-left: 15px;
+  padding: 5px 5px;
+}
+
+
+.pagination {
+  display: flex;
+  justify-content: start;
+  list-style: none;
+  cursor: pointer;
+  margin: 20px 0px;
+  padding-inline-start: 0px;
+}
+
+.pagination a {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #1890ff;
+  color: #1890ff;
+  font-size: 0.7em;
+}
+
+.pagination li {
+  margin: 0px 5px;
+}
+
+
+.pagination__link {
+  font-weight: bold;
+}
+
+.pagination__link--active a {
+  color: #fff;
+  background: #1890ff;
+}
+
+.pagination__link--disabled a {
+  color: rgb(198, 197, 202);
+  border: 1px solid rgb(198, 197, 202);
 }
