--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,17 @@ button.Primary {
   display: inline-block;
 
 }
+button.Disabled,button.Disabled:hover {
+  background-color:#aaaaaa;
+  cursor: not-allowed;
+  border: none;
+  color: white;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  border-radius: 20px;
+  min-width: 100px;
+  display: inline-block;
+}
 
 button.Primary:hover {
   background-color:#40a9ff;
